<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectionFragment">

    <TextView
        android:id="@+id/AddPlayerMenuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player_menu"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/addPlayer1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="20sp"
        android:text="@string/add_player_1" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp" />

    <TextView
        android:id="@+id/addPlayer2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="20sp"
        android:text="@string/add_player_1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200sp"
        android:text="@string/startNewGame" />


</LinearLayout>